- Introduced the copy=True kwarg to ndhist's rebin_axis method. If set to
  ``True``, a deepcopy of the ndhist object is created first and the rebin
  operation is performed on that copy. The default is ``True`` in order to have
  by default the same behaviour as dashi's rebin_axis method.

- Zero bins, that would be discarded by ndhist's rebin_axis method when the axis
  is extendable and the nbins_to_merge is not a true divisor of the number of
  bins of the axis. Otherwise such bins would have a pre-set value when the axis
  gets extended after the rebin operation.

- Implemented the ndhist rebin_axis(axis, nbins_to_merge) method that changes
  the current ndhist object, if the current ndhist object is not a view. If it
  is a view, a deep copy is created first.
  The rebin_axis method returns a reference to the changed ndhist object.

  The reason for letting rebin_axis operate on the ndhist object itself is the
  fact, that this operation can be done very efficiently without the need of
  a copy of all the data. In principle rebin_axis could take a kwarg named
  copy=True, that would call the deepcopy() method first if needed. This would
  mimic the behavior of dashi, that always creates a copy when rebinning.
  In principle, rebin_axis could also take a tuple for axis and nbins_to_merge
  and could rebin several axes at once.

- Implemented unit tests for basic slicing.

- Implemented unit tests for ndhist's deepcopy method.

- Implemented the ndhist.deepcopy() method. It creates a copy of the ndhist
  object. It also copies the underlaying data, i.e. a ndhist view becomes an
  ordinary ndhist object.

- Added the Axis properties has_underflow_bin and has_overflow_bin and adjusted
  the implementation of the derived axis classes and ndhist.
  The reasoning behind these two properties is the proper behaviour of the
  constant_bin_width_axis class, especially when creating slice histograms.