@@ -260,6 +260,16 @@ void register_ndhist()
               "\n"
               "It returns the changed (this or the copy) ndhist object.")
 
+        .def("rebin"
+          , (boost::shared_ptr<ndhist> (ndhist::*)(bp::tuple const &, bp::tuple const &, bool const))&ndhist::rebin
+          , ( bp::arg("self")
+            , bp::arg("axes")
+            , bp::arg("nbins_to_merge")
+            , bp::arg("copy")=true
+            )
+          , "Same as the ``rebin_axis`` method but allows to rebin several "
+            "axes at once.")
+
         // Slicing.
         .def("__getitem__", &ndhist::operator[]
             , (bp::arg("self"), bp::arg("arg"))
